@@ -1,3 +1,8 @@
+2012-04-22  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/debugging.cpp: Expanded 'if defined()' test to included Cygwin
+	thanks to a patch submitted by Dario Buttari
+
 2012-04-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/Evaluator.cpp: errorOccuredSym never used and commented out
